Update * Change fallback version in _variables.scss * Fix spacing in _global.scss

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // variables set via webpack
 $name: 'centum' !default;
-$version: 'x.x.x' !default;
+$version: 'custom-build' !default;
 $env: 'development' !default;
 
 // used in grid mixins and viewport mixin
@@ -40,7 +40,7 @@ $cells: (
   '55': 0.55, // 55%
   '60': 0.6, // 60%
   '65': 0.65, // 65%
-  '66': 2/3, // 66%
+  '66': 2/3, // 66.6666666667%
   '70': 0.7, // 70%
   '75': 0.75, // 75%
   '80': 0.8, // 80%
